# car_dealer

./: CMakeLists.txt  README.md
data/: cars.csv
includes/: app.h  car_dealer.h  car_record.h  defines.h  file_handler.h  user_interface.h
project_assumptions/: architecture.puml
src/: app.cpp  car_dealer.cpp  file_handler.cpp  main.cpp  user_interface.cpp
tests/unit_tests/: CMakeLists.txt  tests_app.cpp  tests_car_dealer.cpp  tests_file_handler.cpp  tests_main.cpp  tests_user_interface.cpp
